k8s/service.yaml
# same as prod 

apiVersion: v1
kind: Service
metadata:
  name: djangoconf-wafer
  labels:
    app: djangoconf-wafer
#   namespace: default
spec:
  ports:
    - port: 8000
      #   protocol: TCP
      targetPort: 8000
  selector:
    app: djangoconf-wafer
  type: NodePort
