k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: djangoconf-wafer-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: djangoconf-2023-wafer-ip
    networking.gke.io/managed-certificates: djangoconf-wafer-managed-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: djangoconf-wafer
spec:
  defaultBackend:
    service:
      name: djangoconf-wafer
      port:
        number: 8000
